# unidic-mecab-translate

./: .gitignore  INSTALL  Makefile.am  Makefile.bat  Makefile.in  README.md  aclocal.m4  char.def  configure  configure.ac  decompress.sh  dicrc  feature.def  translate.py  translate_lex.py
