dicdir     = @DIC_DIR@
dic_DATA   = @MECAB_PRE_DATA@ @MECAB_SYS_DATA@ @MECAB_USER_DATA@
CLEANFILES = @MECAB_SYS_DATA@ @MECAB_USER_DATA@

@MECAB_SYS_DATA@: @MECAB_DIC@ @MECAB_DEF@
	@MECAB_DICT_INDEX@ -d . -o . -f utf8 -t utf8

@MECAB_USER_DATA@: @USER_DIC@ @MODEL_FILE@
	@MECAB_DICT_INDEX@ -d . -o . -f utf8 -t utf8 -m @MODEL_FILE@ -u $@ @USER_DIC@
